# muNavierStokes

./: .gitignore  LICENSE  README.md  curl.py  dns.py  mkdocs.yml  navier_stokes.py  plot.py  pyproject.toml  simulate.py  slice.py  spectrum.py  stokes.py  taylor_green.py
.github/workflows/: tests.yml
benchmarks/: README.md  bench_workload.py  benchmark.py  benchmark_db.py  results.csv  run_benchmark.sh
docs/: benchmark.md  gpu.md  implementation.md  index.md  installation.md  muNavierStokes.md  physics.md  usage.md
milestones/02/: eval_taylor_green.py  milestone02.py
milestones/03/: milestone03.py
milestones/04/: milestone04.py
muNavierStokes/: NavierStokes.py  RungeKutta.py  __init__.py
scripts/: eval_taylor_green.py  plot.py  slice.py  spectrum.py
tests/: test_correctness.py  test_gpu.py  test_navier_stokes.py  test_simulate.py
