[project]
name = "muNavierStokes"
version = "0.1.0"
description = "Pseudo-spectral direct numerical simulation of the incompressible Navier-Stokes equations on top of muGrid"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "muGrid",
    "NuMPI",
    "mpi4py",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "netCDF4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make the top-level package (muNavierStokes) and simulate.py importable.
pythonpath = ["."]

[tool.coverage.run]
source = ["muNavierStokes", "simulate"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if __name__ == .__main__.:",
]
