[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "muNavierStokes"
authors = [
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
# version (from __version__) and description (from the module docstring) are
# read by flit from muNavierStokes/__init__.py.
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "muGrid",
    "NuMPI",
    "mpi4py",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "netCDF4",
]

[project.urls]
repository = "https://github.com/muSpectre/muNavierStokes"

[tool.flit.module]
name = "muNavierStokes"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make the top-level package (muNavierStokes) and simulate.py importable.
pythonpath = ["."]

[tool.coverage.run]
source = ["muNavierStokes", "simulate"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if __name__ == .__main__.:",
]
